manifests/ingress/master-ingress.yml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: my.domain.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80

  - host: kibana.domain.com
    http:
      paths:
      - backend:
          serviceName: ext_kibana
          servicePort: 5601
  
---

 
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: kibana-ingress
#   namespace: kube-logging
#   annotations:
#     kubernetes.io/ingress.class: nginx
# spec:
#   rules:
#   - host: kibana.domain.com
#     http:
#       paths:
#       - backend:
#           serviceName: kibana
#           servicePort: 5601
